<resources>
    <string name="app_name">FarmKu</string>
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="kata_sandi_anda">Kata Sandi Anda</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="email_anda">Email anda</string>
    <string name="email">E-mail</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="atau">Atau</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="logo_farmku">Logo FarmKu</string>
    <string name="kirim">Kirim</string>
    <string name="forgot_subtitle">Jangan khawatir! Isikan e-mail anda dan kami akan mengirimkan link reset kata sandi anda.</string>
=======
>>>>>>> parent of 3ac9490 (Login, Forgot Password)
=======
>>>>>>> parent of 3ac9490 (Login, Forgot Password)
=======
>>>>>>> parent of 3ac9490 (Login, Forgot Password)
</resources>